--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pandas==2.1.4
 protobuf==4.23.4
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
@@ -41,7 +42,6 @@ tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.15.0
 termcolor==2.4.0
 typing_extensions==4.9.0
 tzdata==2023.3
